# bispecific-fih-dosability

./: .gitignore  README.md  pyproject.toml
data/: candidates.csv
examples/: candidate_panel.py
src/bsdose/: __init__.py  corridor.py  figures.py  screen.py  ternary.py
tests/: test_screen.py  test_ternary.py
