[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bsdose"
version = "0.1.0"
description = "Mechanistic first-in-human dosability screen for tumor-targeted bispecific antibodies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bo Ma" }]
keywords = ["pharmacometrics", "bispecific", "ternary complex", "MABEL", "first-in-human", "MIDD"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
